--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <version>3.1.3</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
-  
+
   <properties>
     <maven.compiler.source>21</maven.compiler.source>
     <maven.compiler.target>21</maven.compiler.target>
@@ -52,6 +52,14 @@
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
     </dependency> 
+
+    <dependency>
+      <groupId>com.ib.client</groupId>
+      <artifactId>ib-api</artifactId>
+      <version>10.30.01</version> <!-- version can be any placeholder -->
+      <scope>system</scope>
+      <systemPath>${project.basedir}/libs/TwsApi.jar</systemPath>
+  </dependency>
   </dependencies>
 
   <build>
